[ISSUE-572] ability to set mem/cpu for csi containers (#82)
Signed-off-by: Anton Yurkov <anton.yurkov@dell.com>

- Add `Resources *corev1.ResourceRequirements` to all components `api/v1/components`
- Add follow tree to each csi component in csi-baremetal-deployment and value.yaml:

```
      resources:
        requests:
          memory: 
          cpu: 
        limits:
          memory: 
          cpu:
```

--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -24,31 +24,43 @@ spec:
       image:
         name: csi-baremetal-controller
         tag: {{ .Values.driver.controller.image.tag | default .Values.image.tag }}
+      resources:
+        {{- include "setResources" .Values.driver.controller | indent 8 }}
       log:
         format: {{ .Values.driver.log.format }}
         level: {{ .Values.driver.log.level }}
       sidecars:
-       livenessprobe:
+        livenessprobe:
           image:
             name: livenessprobe
             tag: {{ .Values.driver.livenessProbe.image.tag }}
-       csi-provisioner:
+          resources:
+            {{- include "setResources" .Values.driver.livenessProbe | indent 12 }}
+        csi-provisioner:
           image:
             name: csi-provisioner
             tag: {{ .Values.driver.provisioner.image.tag }}
-       csi-resizer:
+          resources:
+            {{- include "setResources" .Values.driver.provisioner | indent 12 }}
+        csi-resizer:
           image:
             name: csi-resizer
             tag: {{ .Values.driver.resizer.image.tag }}
+          resources:
+            {{- include "setResources" .Values.driver.resizer | indent 12 }}
     node:
       driveMgr:
         image:
           name: csi-baremetal-{{ .Values.driver.drivemgr.type }}
           tag: {{ .Values.driver.drivemgr.image.tag | default .Values.image.tag }}
+        resources:
+          {{- include "setResources" .Values.driver.drivemgr | indent 10 }}
         endpoint: {{ .Values.driver.drivemgr.grpc.server.endpoint }}
       image:
         name: csi-baremetal-node
         tag: {{ .Values.driver.node.image.tag | default .Values.image.tag }}
+      resources:
+        {{- include "setResources" .Values.driver.node | indent 8 }}
       log:
         format: {{ .Values.driver.log.format }}
         level: {{ .Values.driver.log.level }}
@@ -57,10 +69,14 @@ spec:
           image:
             name: csi-node-driver-registrar
             tag: {{ .Values.driver.nodeDriverRegistrar.image.tag }}
+          resources:
+            {{- include "setResources" .Values.driver.nodeDriverRegistrar | indent 12 }}
         livenessprobe:
           image:
             name: livenessprobe
             tag: {{ .Values.driver.livenessProbe.image.tag }}
+          resources:
+            {{- include "setResources" .Values.driver.livenessProbe | indent 12 }}
     metrics:
       path: {{ .Values.driver.metrics.path }}
       port: {{ .Values.driver.metrics.port }}
@@ -74,6 +90,8 @@ spec:
     image:
       name: csi-baremetal-scheduler-extender
       tag: {{ .Values.scheduler.image.tag | default .Values.image.tag }}
+    resources:
+      {{- include "setResources" .Values.scheduler | indent 6 }}
     log:
       format: {{ .Values.scheduler.log.format }}
       level: {{ .Values.scheduler.log.level }}
@@ -86,6 +104,8 @@ spec:
       image:
         name: csi-baremetal-scheduler-patcher
         tag: {{ .Values.scheduler.patcher.image.tag | default .Values.image.tag }}
+      resources:
+        {{- include "setResources" .Values.scheduler.patcher | indent 8 }}
       interval: {{ .Values.scheduler.patcher.interval }}
       restoreOnShutdown: {{ .Values.scheduler.patcher.restore_on_shutdown }}
       configMapName: {{ .Values.scheduler.patcher.config_map_name }}
@@ -96,6 +116,8 @@ spec:
     image:
       name: csi-baremetal-node-controller
       tag: {{ .Values.nodeController.image.tag | default .Values.image.tag }}
+    resources:
+      {{- include "setResources" .Values.nodeController | indent 6 }}
     log:
       format: {{ .Values.nodeController.log.format }}
       level: {{ .Values.nodeController.log.level }}
