--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -36,9 +36,25 @@ driver:
   controller:
     image:
       tag:
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   node:
     image:
       tag:
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   drivemgr:
     type: basemgr
     image:
@@ -49,20 +65,60 @@ driver:
     deployConfig: false
     amountOfLoopDevices: 3
     sizeOfLoopDevices: 101Mi
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   # Sidecars parameters
   provisioner:
     image:
       # if you want to use topology feature (multiple PVCs per pod) you should use v1.2.2
       tag: v1.6.0
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   resizer:
     image:
       tag: v1.1.0
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   nodeDriverRegistrar:
     image:
       tag: v1.3.0
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   livenessProbe:
     image:
       tag: v2.1.0
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   # Metrics endpoint
   metrics:
     path: /metrics
@@ -93,6 +149,14 @@ scheduler:
   enable: true
   image:
     tag:
+  resources:
+    limits:
+      cpu:
+      memory:
+    requests:
+      cpu:
+      memory:
+
   # Logging settings
   log:
     format: text
@@ -111,6 +175,14 @@ scheduler:
     enable: false
     image:
       tag:
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
     kubeconfig: /etc/kubernetes/scheduler.conf
     interval: 60
     restore_on_shutdown: true
@@ -126,6 +198,14 @@ nodeController:
   enable: true
   image:
     tag:
+  resources:
+    limits:
+      cpu:
+      memory:
+    requests:
+      cpu:
+      memory:
+
   # Logging settings
   log:
     format: text
