--- a/charts/csi-baremetal-deployment/templates/storageclass/nvme-raw-part-sc.yaml
+++ b/charts/csi-baremetal-deployment/templates/storageclass/nvme-raw-part-sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: {{ .Values.storageClass.name }}-nvme
+  name: {{ .Values.storageClass.name }}-nvme-raw-part
 # CSI driver name
 provisioner: csi-baremetal
 reclaimPolicy: Delete
@@ -9,4 +9,4 @@ volumeBindingMode: WaitForFirstConsumer
 parameters:
   storageType: NVME
   fsType: xfs
-  isPartitioned: true
+  isPartitioned: "true"
