--- a/charts/csi-baremetal-deployment/templates/storageclass/default-sc.yaml
+++ b/charts/csi-baremetal-deployment/templates/storageclass/default-sc.yaml
@@ -12,3 +12,4 @@ parameters:
   # With ANY storage type CSI allocates volumes on top of ANY physical drive (non LVG)
   storageType: ANY
   fsType: xfs
+  WBTDisable: "on"
