--- a/charts/csi-baremetal-deployment/templates/configmap/wbt-config.yaml
+++ b/charts/csi-baremetal-deployment/templates/configmap/wbt-config.yaml
@@ -21,4 +21,5 @@ data:
 
   acceptable_kernels.yaml: |-
     node_kernel_versions:
-      - 5.12.13-051213-generic
+    # RHEL 8
+      - 4.18.0-193.65.2.el8_2.x86_64
