--- a/charts/csi-baremetal-deployment/templates/configmap/wbt-config.yaml
+++ b/charts/csi-baremetal-deployment/templates/configmap/wbt-config.yaml
@@ -2,24 +2,29 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   namespace: {{ .Release.Namespace }}
-  name: wbt-config
+  name: node-config
   labels:
     app: csi-baremetal-node
 data:
-  config.yaml: |-
+  wbt-config.yaml: |-
     enable: true
     wbt_lat_usec_value: 0
     acceptable_volume_options:
-    # FS, RAW, RAWPART
+    # Values - FS, RAW, RAWPART
+    # Block volumes don't take any impact from WBT
       modes:
         - FS
-    # HDD, SSD, NVME, ANY
+    # Name from "kubectl get sc"
+    # It is risky to change WBT settings for LVG Volumes
       storage_types:
-        - HDD
-        - SSD
-        - NVME
+        - csi-baremetal-sc-hdd
+        - csi-baremetal-sc-ssd
+        - csi-baremetal-sc-nvme
 
-  acceptable_kernels.yaml: |-
+  wbt-acceptable_kernels.yaml: |-
+    enable_for_all: false
+    # The list of acceptable kernel versions
+    # Used only if enable_for_all is false
     node_kernel_versions:
-    # RHEL 8
+      # RHEL 8
       - 4.18.0-193.65.2.el8_2.x86_64
