--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,3 +1,3 @@
-# TODO - improve code coverage - https://github.com/dell/csi-baremetal/issues/658
+# TODO: improve code coverage - https://github.com/dell/csi-baremetal/issues/658
 ignore:
   - "node_daemonset.go"
