--- a/charts/csi-baremetal-operator/templates/rbac.yaml
+++ b/charts/csi-baremetal-operator/templates/rbac.yaml
@@ -39,6 +39,13 @@ rules:
   - "*"
   verbs:
   - "*"
+- apiGroups:
+  - "rbac.authorization.k8s.io"
+  resources:
+  - rolebindings
+  - roles
+  verbs:
+  - list
 # Required for Openshift only
 # TODO Deploy only when OpenShift - https://github.com/dell/csi-baremetal/issues/422
 - apiGroups:
