feature: adding watchers at controller for role, rolebinding
Signed-off-by: Nikita Mikhnenko <nikita_mikhnenko@dell.com>

--- a/charts/csi-baremetal-operator/templates/rbac.yaml
+++ b/charts/csi-baremetal-operator/templates/rbac.yaml
@@ -46,6 +46,7 @@ rules:
   - roles
   verbs:
   - list
+  - watch
 # Required for Openshift only
 # TODO Deploy only when OpenShift - https://github.com/dell/csi-baremetal/issues/422
 - apiGroups:
