--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_nodes.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_nodes.yaml
@@ -38,10 +38,14 @@ spec:
         description: Node is the Schema for the Node API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
             type: string
           metadata:
             type: object
@@ -50,7 +54,8 @@ spec:
               Addresses:
                 additionalProperties:
                   type: string
-                description: key - address type, value - address, align with NodeAddress struct from k8s.io/api/core/v1
+                description: key - address type, value - address, align with NodeAddress
+                  struct from k8s.io/api/core/v1
                 type: object
               UUID:
                 type: string
