--- a/charts/csi-baremetal-operator/templates/manager.yaml
+++ b/charts/csi-baremetal-operator/templates/manager.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     app: csi-baremetal
     app.kubernetes.io/name: csi-baremetal
+    component: csi-baremetal-operator
+    app.kubernetes.io/component: csi-baremetal-operator
 spec:
   selector:
     matchLabels:
@@ -17,6 +19,8 @@ spec:
         name: {{ .Release.Name }}
         app: csi-baremetal
         app.kubernetes.io/name: csi-baremetal
+        component: csi-baremetal-operator
+        app.kubernetes.io/component: csi-baremetal-operator
         # release label used by fluentbit to make "release" folder
         release: {{ .Release.Name }}
     spec:
