fix field validation
Signed-off-by: roman_kiselenko <roman_kiselenko@dell.com>

--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -113,7 +113,7 @@ spec:
                                 - value
                                 type: object
                               nullable: true
-                              type: object
+                              type: array
                             image:
                               description: Image contain information for components docker images
                               properties:
@@ -305,7 +305,7 @@ spec:
                                 - value
                                 type: object
                               nullable: true
-                              type: object
+                              type: array
                             image:
                               description: Image contain information for components docker images
                               properties:
