--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.7.0
+    controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
   name: deployments.csi-baremetal.dell.com
 spec:
@@ -105,9 +105,13 @@ spec:
                                 description: EnvVars contains additional env variables passed to sidecar containers trough helm
                                 properties:
                                   name:
+                                    pattern: '[A-Z0-9_]'
                                     type: string
                                   value:
-                                    type: string
+                                    anyOf:
+                                    - type: integer
+                                    - type: string
+                                    x-kubernetes-int-or-string: true
                                 required:
                                 - name
                                 - value
@@ -297,9 +301,13 @@ spec:
                                 description: EnvVars contains additional env variables passed to sidecar containers trough helm
                                 properties:
                                   name:
+                                    pattern: '[A-Z0-9_]'
                                     type: string
                                   value:
-                                    type: string
+                                    anyOf:
+                                    - type: integer
+                                    - type: string
+                                    x-kubernetes-int-or-string: true
                                 required:
                                 - name
                                 - value
