--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -43,7 +43,7 @@ spec:
           image:
             name: csi-provisioner
             tag: {{ .Values.driver.provisioner.image.tag }}
-          envVars: {{ .Values.driver.provisioner.envVars | toYaml | nindent 12 }}
+          args: {{ .Values.driver.provisioner.args | toYaml | nindent 12 }}
           resources:
             {{- include "setResources" .Values.driver.provisioner | indent 12 }}
         csi-resizer:
