--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -36,6 +36,13 @@ driver:
   controller:
     image:
       tag:
+    # Parameters for RateLimiter in reservation reconciliation-controller
+    # See k8s.io/client-go/util/workqueue.NewItemFastSlowRateLimiter for details
+    # Used due to expected attempts during processing ACRs with LVG Volumes
+    reservation:
+      fastTimeout: 1500ms
+      slowTimeout: 12s
+      maxAttempts: 30
     resources:
       limits:
         cpu:
