--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.7.0
+    controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
   name: deployments.csi-baremetal.dell.com
 spec:
@@ -101,10 +101,13 @@ spec:
                           description: Sidecar represent CSI sidecar containers
                           properties:
                             args:
+                              additionalProperties:
+                                anyOf:
+                                - type: integer
+                                - type: string
+                                x-kubernetes-int-or-string: true
                               description: Arguments to the entrypoint.
-                              items:
-                                type: string
-                              type: array
+                              type: object
                             image:
                               description: Image contain information for components docker images
                               properties:
@@ -284,10 +287,13 @@ spec:
                           description: Sidecar represent CSI sidecar containers
                           properties:
                             args:
+                              additionalProperties:
+                                anyOf:
+                                - type: integer
+                                - type: string
+                                x-kubernetes-int-or-string: true
                               description: Arguments to the entrypoint.
-                              items:
-                                type: string
-                              type: array
+                              type: object
                             image:
                               description: Image contain information for components docker images
                               properties:
